# bug_3887

bug_3887/: README.md  config.json  pyproject.toml
bug_3887/src/bug_3887/: app.py
bug_3887/src/bug_3887/public/: client.html  index.html
